@@ -382,7 +382,7 @@ sub scribe_notif_new_tape {
 
     # TODO: if $params{error} is set, report it back to the driver
     # (this will be a change to the protocol)
-    log_add($L_INFO, $params{'error'}) if defined $params{'error'};
+    log_add($L_INFO, "$params{'error'}") if defined $params{'error'};
 
     if ($params{'volume_label'}) {
 	$self->{'label'} = $params{'volume_label'};
@@ -447,7 +447,7 @@ sub scribe_notif_log_info {
     my $self = shift;
     my %params = @_;
 
-    log_add($L_INFO, $params{'message'});
+    log_add($L_INFO, "$params{'message'}");
 }
 
 ##
